k8s/overlays/app-preprod/ingress.patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chime
spec:
  tls:
  - hosts:
    - penn-chime.bus.phl.io
    secretName: tls-secret
  rules:
  - host: penn-chime.bus.phl.io
    http:
      paths:
      - path: /
        backend:
          serviceName: chime
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chime-static
spec:
  rules:
  - host: penn-chime.bus.phl.io
    http:
      paths:
      - path: /static/
        backend:
          serviceName: chime
          servicePort: 80
